--- a/src/app/components/shell/endorsements/endorsements.scss
+++ b/src/app/components/shell/endorsements/endorsements.scss
@@ -2,7 +2,7 @@
 @import 'mixins';
 
 .page-endorsements {
-    background-color: color(blue, darker);
+    background-color: color(blue, dark);
     padding: 1rem;
 
     > h2 {
