--- a/src/app/pages/privacy/privacy.scss
+++ b/src/app/pages/privacy/privacy.scss
@@ -23,7 +23,7 @@
     }
 
     .last-update {
-        color: color(gray, lighter);
+        color: color(gray, light);
         font-family: $sans-serif;
         letter-spacing: 0.1em;
         text-transform: uppercase;
