--- a/src/app/pages/endorsements/endorsements.scss
+++ b/src/app/pages/endorsements/endorsements.scss
@@ -2,7 +2,7 @@
 @import 'mixins';
 
 .endorsements-page {
-    border-top: 1px solid color(gray, lighter);
+    border-top: 1px solid color(gray, light);
     padding: 0 2rem;
     text-align: center;
 
