--- a/src/app/pages/map/map.scss
+++ b/src/app/pages/map/map.scss
@@ -2,7 +2,7 @@
 @import 'mixins';
 
 .map-page {
-    border-top: 1px solid color(gray, lighter);
+    border-top: 1px solid color(gray, light);
     padding: 0 2rem;
     text-align: center;
 
@@ -19,7 +19,7 @@
     }
 
     .district32-map {
-        background-color: color(gray, light);
+        background-color: color(gray, lighter);
         height: 40vw;
         margin: 0 auto;
         width: 50vw;
