--- a/src/app/pages/voting/voting.scss
+++ b/src/app/pages/voting/voting.scss
@@ -2,7 +2,7 @@
 @import 'mixins';
 
 .voting-page {
-    border-top: 1px solid color(gray, lighter);
+    border-top: 1px solid color(gray, light);
     padding: 0 2rem;
     text-align: center;
 
@@ -39,7 +39,7 @@
         color: color(black);
 
         &:hover {
-            color: color(red, darker);
+            color: color(red, dark);
         }
     }
 
