--- a/src/styles/components/notices.scss
+++ b/src/styles/components/notices.scss
@@ -9,9 +9,9 @@ $notice-colors: (
 );
 
 .notice {
-    background-color: color(yellow, light);
-    border: 0.1rem solid color(yellow, lighter);
-    color: color(yellow, dark);
+    background-color: color(yellow, lighter);
+    border: 0.1rem solid color(yellow, light);
+    color: color(yellow, darker);
     display: inline-block;
     font-family: $serif;
     margin: 0 0 1rem;
@@ -20,18 +20,18 @@ $notice-colors: (
 
 @each $color in $notice-colors {
     .notice-#{$color} {
-        background-color: color($color, light);
-        border-color: color($color, lighter);
-        color: color($color, dark);
+        background-color: color($color, lighter);
+        border-color: color($color, light);
+        color: color($color, darker);
 
         @include wcag2-aa {
-            background-color: lighten(color($color, light), 3%);
-            color: darken(color($color, dark), 3%);
+            background-color: lighten(color($color, lighter), 3%);
+            color: darken(color($color, darker), 3%);
         }
 
         @include wcag2-aaa {
-            background-color: lighten(color($color, light), 5%);
-            color: darken(color($color, dark), 5%);
+            background-color: lighten(color($color, lighter), 5%);
+            color: darken(color($color, darker), 5%);
         }
     }
 }
