--- a/src/app/components/shell/banner/banner.scss
+++ b/src/app/components/shell/banner/banner.scss
@@ -6,12 +6,24 @@
     padding: 1rem;
     text-align: center;
 
+    &:hover {
+        background-color: color(yellow, darker);
+    }
+
     &.banner-alert {
         background-color: color(red, dark);
+
+        &:hover {
+            background-color: color(red, darker);
+        }
     }
 
     &.banner-notice {
         background-color: color(orange, dark);
+
+        &:hover {
+            background-color: color(orange, darker);
+        }
     }
 
     a {
